--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-mmkv": "^2.4.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
