--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "release": "dotenv release-it"
   },
   "dependencies": {
-    "@kanzitelli/if-component": "^0.3.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.2",
@@ -38,6 +37,7 @@
     "date-fns": "^2.29.3",
     "expo": "^46.0.0",
     "expo-dev-client": "~1.3.1",
+    "expo-image-picker": "^13.3.1",
     "expo-localization": "~13.1.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -53,6 +53,7 @@
     "react-native": "0.69.6",
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "^0.31.1",
     "react-native-mmkv": "^2.4.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.9.1",
